package com.directi.training.ocp.exercise_refactored;

public class SpaceResourceAllocator extends ResourceAllocator {
    protected int findFreeSlot() {
        return 0;
    }

    protected void markSlotBusy(int resourceId) {
    }

    protected void markSlotFree(int resourceId) {
    }
}
